--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,22 @@
 cmake_minimum_required(VERSION 3.28)
-project(DenseKAN C)
+project(DenseKAN LANGUAGES C CUDA)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(DenseKAN main.c
-        splines.c
-        splines.h
-        kan_layer.c
-        kan_layer.h
+set(CUDA_SOURCES
+        src/CUDA/kan_layer.cu
+)
+
+set(C_SOURCES
+        src/main.c
+        src/KAN/kan_layer.c
+        src/KAN/splines.c
+)
+
+add_executable(DenseKAN ${C_SOURCES} ${CUDA_SOURCES})
+
+
+target_include_directories(DenseKAN PRIVATE
+        src/KAN
+        src/CUDA
 )
